<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MainActivity">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/activity_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:context="com.example.android.justjava.MainActivity">

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint"
            android:inputType="textCapWords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/toppings"
            android:textAllCaps="true" />


        <CheckBox
            android:id="@+id/cream"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="check"
            android:paddingLeft="24dp"
            android:text="@string/cream"
            android:textSize="16sp" />

        <CheckBox
            android:id="@+id/chocolate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="check2"
            android:paddingLeft="24dp"
            android:text="@string/choco"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:text="@string/quantity"
            android:textAllCaps="true" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:onClick="decrement"
                android:text="@string/minus_button" />

            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/exact_quantity"
                android:textColor="#000000"
                android:textSize="16sp" />

            <Button
                android:layout_width="46dp"
                android:layout_height="46dp"
                android:onClick="increment"
                android:text="@string/plus_button" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="submitOrder"
            android:text="@string/order" />

    </LinearLayout>
</ScrollView>